--- a/TypeSound/style.css
+++ b/TypeSound/style.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
   font-family: 'Crete Round', serif;
+  color: #f4cb42;
   text-align: center;
   font-size: 28px;
   line-height: 1.5;
